<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sunny</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_action_share">Share</string>
    <string name="action_map">Map Location</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_location">Location</string>
    <string name="pref_default_location">Rotterdam</string>
    <string name="pref_location_key">location</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Label temperature units -->
    <string name="pref_temperature_units">Temperature Units</string>

    <!-- Key temperature units -->
    <string name="pref_temperature_units_key" translatable="false">temperature_units</string>

    <!-- Label Imperial temperature option -->
    <string name="pref_label_temperature_imperial">Imperial</string>

    <!-- Label Metric temperature option -->
    <string name="pref_label_temperature_metric">Metric</string>

    <!-- Value in SharedPreferences temperature units metric-->
    <string name="pref_value_temperature_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences temperature units imperial -->
    <string name="pref_value_temperature_imperial" translatable="false">imperial</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g>hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g>%%</string>

    <string name="wind_format_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="wind_format_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">anisia.sunny</string>
    <string name="content_authority">anisia.sunny</string>

    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Shared preference notification-->
    <string name="pref_enable_notification_label">Weather Notifications</string>
    <string name="pref_enable_notification_key" translatable="false">enable_notification</string>
    <string name="pref_enable_notification_true">Enabled</string>
    <string name="pref_enable_notification_false">Not Enabled</string>
    <string name="pref_enable_notification_default" translatable="false">true</string>

    <string name="pref_location_status_key" translatable="false">loc-status</string>

    <!-- Information -->
    <string name="empty_string">No weather information available</string>
    <string name="empty_string_no_connection">No connections available</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>

    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <!-- A11y-->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_max_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_min_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>

    <!-- Weather Conditions -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string> <!-- moderate breeze -->
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="low">%1$s</xliff:g>)</string>

    <!-- icon -->
    <string name="pref_icon_pack_label">Icon Pack</string>
    <string name="pref_icon_pack_key" translatable="false">art_pack</string>
    <string name="pref_icon_url_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>
    <string name="format_icon_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>
    <string name="pref_default_icon_pack">Sunny</string>
    <string name="pref_icon_label_sunny">Sunny</string>
    <string name="pref_icon_label_sunshine">Sunshine</string>



</resources>
