<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <anisia.sunny.LocationEditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_location"
        android:inputType="textCapWords"
        android:key="@string/pref_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_location"
        app:minLetters="3"/>

    <ListPreference
        android:key="@string/pref_temperature_units_key"
        android:title="@string/pref_temperature_units"
        android:dialogTitle="@string/pref_temperature_units"
        android:entries="@array/pref_array_temperature_units"
        android:entryValues="@array/pref_temperature_units_values"
        android:defaultValue="@string/pref_units_metric"/>

    <ListPreference
        android:key="@string/pref_icon_pack_key"
        android:title="@string/pref_icon_pack_label"
        android:dialogTitle="@string/pref_icon_pack_label"
        android:entries="@array/pref_icon_options"
        android:entryValues="@array/pref_icon_values"
        android:defaultValue="@string/pref_default_location"
        />

    <CheckBoxPreference
        android:key="@string/pref_enable_notification_key"
        android:title="@string/pref_enable_notification_label"
        android:summaryOff="@string/pref_enable_notification_false"
        android:summaryOn="@string/pref_enable_notification_true"
        android:defaultValue="@string/pref_enable_notification_default"
        />

</PreferenceScreen>
